--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ notifications:
 before_install: #before_script:
   - bundle update
   - openssl aes-256-cbc -K $encrypted_0c48b83b2f58_key -iv $encrypted_0c48b83b2f58_iv -in deploy.enc -out deploy -d
-  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/deploy_key\n" >> ~/.ssh/config
+  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/deploy\n" >> ~/.ssh/config
   - ssh-keyscan github.com >> ~/.ssh/known_hosts
-  - chmod 600 ~/.ssh/deploy_key
+  - chmod 600 ~/.ssh/deploy
 install: #script
   - bundle install
 # after_success: travis/after_success_script.sh
