--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ before_script:
   - chmod 600 deploy_key
   - eval $(ssh-agent -s)
   - ssh-add deploy_key
-  # - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/deploy\n" >> ~/.ssh/config
-  # - ssh-keyscan github.com >> ~/.ssh/known_hosts
-  # - chmod 600 ~/.ssh/deploy
+  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile ~/.ssh/deploy\n" >> ~/.ssh/config
+  - ssh-keyscan github.com >> ~/.ssh/known_hosts
 script:
   - fastlane beta --verbose
 # after_success: travis/after_success_script.sh
