--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - chmod 600 deploy_key
   - eval $(ssh-agent -s)
   - ssh-add deploy_key
-  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile deploy\n" >> ~/.ssh/config
+  - echo -e "Host github.com\n\tHostName github.com\n\tUser git\n\tIdentityFile deploy_key\n" >> ~/.ssh/config
   - ssh-keyscan github.com >> ~/.ssh/known_hosts
 script:
   - fastlane beta --verbose
