Users, Rounds modules with utils, swinject change, most of models added

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ xcuserdata/
 *.moved-aside
 *.xccheckout
 *.xcscmblueprint
+*.DS_Store
+.DS_Store
 
 ## Obj-C/Swift specific
 *.hmap
@@ -53,4 +55,3 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
-.DS_Store
